<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cloSignUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/everhouricon"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/sign_up_prompt"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textColor="@color/blue1"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etvFName"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/inputfields"
        android:ems="10"
        android:inputType="text"
        android:paddingStart="15dp"
        android:hint="@string/f_name"
        android:textColor="@color/blue3"
        android:textColorHint="@color/blue3"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor,RtlSymmetry,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/etvLName"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/inputfields"
        android:ems="10"
        android:inputType="text"
        android:paddingStart="15dp"
        android:hint="@string/l_name"
        android:textColor="@color/blue3"
        android:textColorHint="@color/blue3"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor,RtlSymmetry,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/etvEmail"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="375dp"
        android:background="@drawable/inputfields"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:textColor="@color/blue3"
        android:textColorHint="@color/blue3"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/etvPassword"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="450dp"
        android:background="@drawable/inputfields"
        android:ems="10"
        android:hint="@string/pw"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:textColor="@color/blue3"
        android:textColorHint="@color/blue3"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/etvConfirmPassword"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="525dp"
        android:background="@drawable/inputfields"
        android:ems="10"
        android:hint="@string/confirm_pw"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:textColor="@color/blue3"
        android:textColorHint="@color/blue3"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <android.widget.Button
        android:id="@+id/btnSignUpMain"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="610dp"
        android:background="@drawable/gradient"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <LinearLayout
        android:id="@+id/lloPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="670dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvUpToIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up_to_in"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:text="@string/sign_in"
            android:textColor="@color/blue1"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>