<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cloProjectDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/tvProjectDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/dummy_project_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pencil_outline"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvOverview"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:text="@string/overview"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lloHR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="155dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="340dp"
            android:layout_height="1dp"
            android:background="#454545" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lloClient"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="175dp"
        android:background="@drawable/black_card"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/client"
            android:textColor="@color/blue1" />

        <TextView
            android:id="@+id/tvClientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dummy_client_name"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lloRole"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="235dp"
        android:background="@drawable/black_card"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/role_ic"
            android:textColor="@color/blue1" />

        <TextView
            android:id="@+id/tvRoleIC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dummy_role_ic"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTracked"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="305dp"
        android:text="@string/tracked_hours"
        android:textColor="@color/blue1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTrackedNum"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="325dp"
        android:text="@string/dummy_stat"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="65sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCount"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:text="@string/project_count"
        android:textColor="@color/blue1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCountNum"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="440dp"
        android:text="@string/dummy_stat"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="65sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSpecifics"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="535dp"
        android:text="@string/specifics"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lloHR2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="565dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <View
            android:layout_width="340dp"
            android:layout_height="1dp"
            android:background="#454545" />
    </LinearLayout>

    <Button
        android:id="@+id/btnTimeEntries"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="590dp"
        android:background="@drawable/gradient"
        android:text="@string/time_entries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <LinearLayout
        android:id="@+id/lloNavbar"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@drawable/black_card"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ivReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/chart_line"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ivHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/home_outline"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ivAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/account_outline"
            tools:ignore="ContentDescription" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>